# v7-go-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: __init__.py  conftest.py  test_cli.py
v7_cli/: __init__.py  cli.py  sdk.py
v7_cli/core/: __init__.py  client.py  types.py
